fix:修改图片显示代码

--- a/modwiki/package.json
+++ b/modwiki/package.json
@@ -32,5 +32,5 @@
     "vite-plugin-vue-devtools": "^7.7.0",
     "vue-tsc": "^2.2.0"
   },
-  "homepage": "https://721cool.github.io/web_Test"
+  "homepage": "https://721cool.github.io/modwiki_demo1"
 }
